<resources>
    <string name="app_name">StateDataManagement</string>
    <string name="welcome">Welcome to</string>
    <string name="ready_to">Ready To Travel</string>
    <string name="signup_tip">Sign up with Facebook for the most fulfilling trip planning experience with us!</string>
    <string name="login_with_fb">Log in with Facebook</string>
    <string name="login_with_email">Log in with email address</string>
    <string name="create_account">Create a new account</string>
    <string name="almost_there">Almost there!</string>
    <string name="subheader">Complete the form below to create your Ready To Travel account.</string>
    <string name="mandatory">*Mandatory</string>
    <string name="first_name">First Name *</string>
    <string name="last_name">Last Name *</string>
    <string name="email_address">Email Address *</string>
    <string name="date_of_birth">Date of Birth *</string>
    <string name="nationality">Nationality</string>
    <string name="country_of_Residence">Country of Residence</string>
    <string name="mobile_number">Mobile no. (Optional)</string>
    <string name="create_my_account">Create my account now</string>

</resources>